feat: add fetch community recipes
